# iambic

./: .codecov.yml  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.awslambdaric  Dockerfile.base_image  LICENSE.md  Makefile  Makefile.iambic_lambda  Makefile.itest  Makefile.lambda  README.md  SECURITY.md  docker-compose-cicd.yaml  docker-compose.yaml  docker-compose_github_action.yaml  install.sh  pyproject.toml  pytest.ini  saas_support.py  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-base-container.yml  build-container.yml  detect-secrets.yml  pr-build-conatiner.yml  publish-docs.yml  publish-release.yml  pypi-release.yml  run-test.yml  temp-sbom.yml
build_utils/: tag_and_build_container.py
demo/: admin_role.yaml  config.yaml  demo_config.yaml  generate_config.py  generate_role.py  test-org.yaml
deployment/create_github_app_proto/: create_github_app.py  index.html
deployment/efs_lambda/: prototype.template
deployment/github_app/: .terraform.lock.hcl  main.tf  output.tf  vars.tf
deployment/github_app_iam_roles/: main.tf  vars.tf
deployment/iambic_code_build/: README.md  buildspec.yaml  main.tf  vars.tf
deployment/iambic_ecr/: README.md  main.tf  output.tf  vars.tf
deployment/local_tf_deployment/: README.md
deployment/upgrade_iambic_version_for_generic_git_provider_lambda/: iambic-github-app-updater-role-template.yaml  upgrade_lambda.py
deployment/upgrade_iambic_version_for_lambda/: iambic-github-app-updater-role-template.yaml  upgrade_lambda.py
dev_tools/: README.md
dev_tools/simulate_generic_git_in_aws_lambda/: simulate_generic_git.py
dev_tools/simulate_github_lambda/: simulate-github-lambda-events.py  simulate-github-lambda.py
dev_tools/webhook_router/: iambic-dev-webhook-lambda.py
docs/: CONTRIBUTING.md  DATA_FLOW.md  DEVELOPMENT_SETUP.md  DOCKER.md  GITHUB_APP_DESIGN.md  GITHUB_INTEGRATION.md  SCHEMA.md  generate_schema.py
docs/cep/: 000-cep-template.md  001-AWS-Managed-Resources-Attributes  001-AWS-Managed-Resources-Attributes.md  002-GitHub-App-Interactions-Protocol.md  003-GitHub-App-Deployment-Revamp.md  004-generic-git-provider-support.md
docs/feature_requests/: request_001_minimize_gh_minutes_spend.md
docs/schemas/: account_config.md  assume_role_policy_document.md  aws_iam_group_template.json  aws_iam_group_template.md  aws_iam_managed_policy_template.json  aws_iam_managed_policy_template.md  aws_iam_role_template.json  aws_iam_role_template.md  aws_iam_user_template.json  aws_iam_user_template.md  aws_identity_center_permission_set_template.json  aws_identity_center_permission_set_template.md  awsaccount.md  awsidentity_center_permission_set_template.json  awsidentity_center_permission_set_template.md  awsorganization.json  awsorganization.md  azure_active_directory_group_template.json  azure_active_directory_group_template.md  azure_active_directory_user_template.md  config.json  config.md  extends_config.json  extends_config.md  google_workspace_group_template.json  google_workspace_group_template.md  group.md  group_member.md  group_template.json  group_template.md  managed_policy_ref.md  managed_policy_template.json  managed_policy_template.md  max_session_duration.md  okta_app_template.json  okta_app_template.md  okta_group_template.json  okta_group_template.md  okta_user_template.json  okta_user_template.md  (+10 more)
docs/web/: Makefile  docusaurus.config.js  package-lock.json  package.json
functional_tests/: README.md  conftest.py  test_all.py  test_config_discovery.py  test_github_cicd.py  test_google.py  test_google_workspace.py  test_import.py  test_okta.py  test_wizard.py
functional_tests/azure_ad/: base_test_case.py
iambic/: main.py
iambic/aws/: handlers.py  iambic_plugin.py  models.py  utils.py
iambic/cicd/: github.py  github_app.py
iambic/config/: dynamic_config.py  models.py  templates.py  utils.py  wizard.py
iambic/core/: constants.py  context.py  detect.py  exceptions.py  git.py  iambic_enum.py  iambic_plugin.py  logger.py  models.py  noq_json.py  parser.py  template.py  template_generation.py  utils.py
iambic/github/: utils.py
iambic/google/: models.py
iambic/lambda/: app.py
iambic/okta/: exceptions.py  models.py  utils.py
iambic/output/: __init__.py  filters.py  markdown.py  models.py  text.py
iambic/plugins/: README.md
iambic/plugins/v0_1_0/google_workspace/: handlers.py  iambic_plugin.py  models.py  pyproject.toml  template.py
iambic/plugins/v0_1_0/google_workspace/group/: models.py  template_generation.py  utils.py
iambic/plugins/v0_1_0/google_workspace/tests/: test_handlers.py  test_iambic_plugin.py
iambic/plugins/v0_1_0/google_workspace/tests/group/: test_google_group_models.py  test_google_group_utils.py  test_template_generation.py
iambic/plugins/v0_1_0/google_workspace/user/: models.py  template_generation.py  utils.py
iambic/request_handler/: apply.py  detect.py  expire_resources.py  generate.py  git_apply.py  git_plan.py
iambic/slack/: notifications.py
noq_form/: main.py
noq_form/aws/: utils.py
noq_form/config/: models.py  templates.py
noq_form/core/: models.py  noq_json.py  parser.py  template_generation.py  utils.py
noq_form/google/: models.py
noq_form/request_handler/: apply.py  detect.py  generate.py
noq_form/slack/: notifications.py
test/: __init__.py  conftest.py  test_base.py  test_config.py  test_main.py  test_utils.py
test/aws/: factories.py  test_iam_roles.py  test_models.py  test_utils.py
test/cicd/: test_github.py  test_github_app.py
test/config/: test_dynamic_config.py  test_models.py  test_utils.py  test_wizard.py
test/core/: conftest.py  test_aio_utils.py  test_git.py  test_models.py  test_noq_json.py  test_parser.py  test_template_generation.py  test_utils.py
test/docs/: test_generate_docs.py
test/lambda_module/: test_app.py
test/output/: __init__.py  test_markdown_generator.py  test_text_generator.py
test/request_handler/: test_detect.py  (+1 more)
(+483 files in other folders)
