[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Noq Software <hello@noq.dev>"]
description = "The python package used to generate, parse, and execute noqform yaml templates."
exclude = ["build_util/*"]
include = ["iambic/output/templates/*"]
license = "Apache-2.0"
name = "iambic-core"
packages = [
  {include = "iambic", from = "."},
]
readme = "README.md"
version = "0.3.10"

[tool.isort]
add_imports = "from __future__ import annotations"
profile = "black"

[tool.poetry.dependencies]
GitPython = "^3.1.31" 
Jinja2 = "^3.1.2" 
PyGithub = "==1.57" # Since 1.58, PyGithub does not work with Lambda. See https://github.com/PyGithub/PyGithub/issues/2430
aiofiles = "^23.1.0" 
aiohttp = "^3.8.4" 
asgiref = "^3.6.0" 
asyncache = "^0.3.1" 
aws-error-utils = "^2.7.0" 
black = "^23.1.0" 
boto3 = "^1.26.95" 
click = "^8.1.3" 
cryptography = "^39.0.1" 
dateparser = "^1.1.7" 
deepdiff = "^6.3.0" 
dictdiffer = "^0.9.0" 
flake8 = "^6.0.0" 
google-api-python-client = "^2.81.0" 
google-auth = "^2.16.2" 
isort = "^5.12.0" 
jsonschema2md2 = "^0.6.0" 
msal = "^1.21.0" 
okta = "^2.9.2" 
pre-commit = "^3.2.0" 
pydantic = "^1.10.6" 
pydantic-factories = "^1.17.2" 
pyopenssl = "^23.0.0" 
pytest = "^7.2.2" 
pytest-asyncio = "^0.21.0" 
pytest-cov = "^4.0.0" 
pytest-mock = "^3.10.0" 
pytest-rerunfailures = "^11.1.2" 
pytest-xdist = "^3.2.1" 
python = "^3.9" 
questionary = "^1.10.0" 
rich = "^13.3.2" 
"ruamel.yaml" = "^0.17.21" 
slack-bolt = "^1.16.4" 
structlog = "^22.3.0" 
types-dateparser = "^1.1.4.5" 
types-mock = "^5.0.0.5" 
ujson = "^5.7.0" 
xxhash = "^3.2.0" 

[tool.poetry.scripts]
iambic = "iambic.main:cli"

[tool.poetry.group.dev.dependencies]
dateparser = "^1.1.7"
mock = "^5.0.1"
moto = {extras = ["all"], version = "^4.1.5"}
pycryptodome = "^3.17"
pytest-mock-generator = "^1.2.0"
types-aiofiles = "^23.1.0.0"
types-cachetools = "^5.3.0.4"
types-pyyaml = "^6.0.12.8"
types-ujson = "^5.7.0.1"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
