[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Ensure that all other pyproject.toml files in this repository have the same isort settings
known_first_party = ["iambic"]
src_paths = ["iambic","test","functional_tests","build_utils"]
known_third_party = ["_pytest", "okta", "github", "pydantic", "rich"]
profile = "black"
add_imports = ["from __future__ import annotations"]
skip_gitignore = true
line_length = 88


[tool.poetry]
name = "iambic-core"
packages = [
    { include="iambic", from="." },
]
version = "0.11.48"
license = "Apache-2.0"
description = "IAMbic is a multi-cloud IAM control plane that unifies cloud identity management for AWS, Okta, Azure Active Directory, Google Workspace and more into Git."
authors = ["Noq Software <hello@noq.dev>"]
readme = "README.md"
exclude = ["build_util/*"]
include = ["iambic/output/templates/*"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.95"
click = "^8.1.3"
"ruamel.yaml" = "^0.17.21"
asgiref = "^3.6.0"
structlog = "^23.1.0"
pydantic = "^1.10.6"
deepdiff = "^6.3.0"
Jinja2 = "^3.1.2"
ujson = "^5.7.0"
aiofiles = "^23.1.0"
xxhash = "^3.2.0"
slack-bolt = "^1.16.4"
google-api-python-client = "^2.81.0"
google-auth = "^2.16.2"
GitPython = "^3.1.31"
PyGithub = "==1.57" # Since 1.58, PyGithub does not work with Lambda. See https://github.com/PyGithub/PyGithub/issues/2430
pydantic-factories = "^1.17.2"
okta = "^2.9.2"
asyncache = "^0.3.1"
dateparser = "^1.1.7"
questionary = "^1.10.0"
types-dateparser = "^1.1.4.5"
cryptography = "^41.0.1"
aws-error-utils = "^2.7.0"
rich = "^13.3.2"
dictdiffer = "^0.9.0"
msal = "^1.21.0"
aiohttp = "^3.8.5"
pyopenssl = "^23.0.0"
stringcase = "^1.2.0"
tomlkit = "^0.11.8"
typing-extensions = "^4.6.1"
tenacity = "^8.2.2"

[tool.poetry.scripts]
iambic = "iambic.main:cli"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jsonschema2md2 = "^0.6.0"
pre-commit = "^3.2.0"
pycryptodome = "^3.17"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-xdist = "^3.2.1"
pytest-rerunfailures = "^11.1.2"
types-mock = "^5.0.0.5"
types-cachetools = "^5.3.0.4"
types-pyyaml = "^6.0.12.8"
types-aiofiles = "^23.1.0.0"
types-ujson = "^5.7.0.1"
moto = {extras = ["all"], version = "^4.1.5"}
dateparser = "^1.1.7"
