[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "iambic-google-workspace"
version = "0.1.0"
description = "The IAMbic Google Workspace plugin."
authors = ["Noq Software <hello@noq.dev>"]
readme = "README.md"
exclude = ["build_util/*"]

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"

[tool.poetry.dependencies]
python = "^3.10"
"ruamel.yaml" = "^0.17.21"
asgiref = "^3.5.2"
structlog = "^22.1.0"
pydantic = "^1.10.2"
deepdiff = "^5.8.1"
Jinja2 = "^3.1.2"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
ujson = "^5.5.0"
aiofiles = "^22.1.0"
xxhash = "^3.0.0"
google-api-python-client = "^2.64.0"
google-auth = "^2.12.0"
jsonschema2md2 = "^0.6.0"
GitPython = "^3.1.30"
PyGithub = "^1.57"
pydantic-factories = "^1.12.0"
asyncache = "^0.3.1"
dateparser = "^1.1.4"
pytest-mock = "^3.10.0"
types-dateparser = "^1.1.4.5"

[tool.poetry.group.dev.dependencies]
types-cachetools = "^5.2.1"
types-pyyaml = "^6.0.12.2"
types-aiofiles = "^22.1.0.4"
types-ujson = "^5.7.0.0"
